--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -96,7 +96,7 @@
             </div>
             <div class="k_gdp-sign_up">
                 <form class="k_gdp-sign_up-step_1 js_game-sign-up-step-1">
-                    <div>
+                    <div data-th-unless="${user}">
                         Для записи на игру вам необходимо <a class="js_login-required">Войти</a>, или заполнить форму
                         ниже.
                     </div>
