User games registrarion form& admin action button

--- a/app/src/main/resources/site/pages/games/games.html
+++ b/app/src/main/resources/site/pages/games/games.html
@@ -4,6 +4,7 @@
 <head data-th-utext="${pageComponents.pagehead}"></head>
 
 <body class="kosticonnect-page landingPage">
+    <div data-th-remove="tag" data-th-utext="${pageComponents.modal}"></div>
     <div data-th-remove="tag" data-th-utext="${pageComponents.loginRegisterModal}"></div>
     <header class="kosticonnect-header">
         <div class="site_content">
