--- a/app/src/main/resources/site/pages/games/gamesBlock.html
+++ b/app/src/main/resources/site/pages/games/gamesBlock.html
@@ -47,6 +47,11 @@
                     <span class="k_games-link_more" data-th-href="${game.processed.url}">Узнать больше</span>
                 </span>
             </a>
+            
+            <div class="k_games-item_actions">
+                <button class="kosticonnect-button primary"> Список игроков</button>
+                <button class="kosticonnect-button inverted">Добавить игрока</button>
+            </div>
         </li>
     </ul>
     <!--</div>-->
