--- a/app/src/main/resources/site/pages/games/gamesBlock.html
+++ b/app/src/main/resources/site/pages/games/gamesBlock.html
@@ -1,57 +1,61 @@
 <div class="k_games-day_block">
     <ul class="k_games-list">
-        <li class="k_games-day_block">
-            <h2 class="k_games-title kosticonnect-title">
-            <!-- <h2 class="k_games-title kosticonnect-title"
-                data-th-text="${day.dayName + ' ' + day.date + ' ' + day.monthName + ' | ' + day.displayName}"> -->
-                Пятница 26,02 | День 1
-            </h2>
-        </li>
+        <div data-th-remove="tag" data-th-each="game, iter : ${games}">
 
-        <li class="k_games-time_block">
-            <h3 class="k_games-time_title">
-                <span>08:00-11:30</span>
-                <!-- <span data-th-if="${block.time.end}" data-th-text="${block.time.start + ' - ' + block.time.end}"></span>
-                <span data-th-unless="${block.time.end}" data-th-text="${block.time.start}"></span> -->
-                <span>MSK</span>
-            </h3>
-        </li>
-        <li class="k_games-item" data-th-each="game : ${games}">
-            <a class="k_games-item_link" data-th-href="${game.processed.url}">
-                <span class="k_games-img_wrap">
-                    <img data-th-if="${game.processed.image and !game.processed.image.placeholder}"
-                        data-th-src="${game.processed.image.url}">
-                    <img data-th-if="${(!game.processed.image or game.processed.image.placeholder) and game.processed.system and game.processed.system.localizable}"
-                        data-th-src="${portal.assetUrl({'_path=images/gameSystems/' + game.processed.system.text + '.jpg'})}">
-                    <img data-th-if="${(!game.processed.image or game.processed.image.placeholder) and game.processed.system and !game.processed.system.localizable}"
-                        data-th-src="${portal.assetUrl({'_path=images/gameSystems/default.jpg'})}">
-                    <span class="k_games-seats">
-                        <span>места</span>
-                        <span
-                            data-th-text="${game.processed.seatsReserved + '/' + game.content.data.maxPlayers}"></span>
+            <li class="k_games-day_block"
+                data-th-if="${iter.index - 1 < 0 or (iter.index - 1 >= 0 and game.processed.day.content._id != games[iter.index - 1].processed.day.content._id)}">
+                <h2 class="k_games-title kosticonnect-title"
+                    data-th-text="${game.processed.day.processed.dayName + ' ' + game.processed.day.processed.date + ' ' + game.processed.day.processed.monthName + ' | ' + game.processed.day.content.displayName}">
+                </h2>
+            </li>
+
+            <li class="k_games-time_block"
+                data-th-if="${iter.index - 1 < 0 or (iter.index - 1 >= 0 and game.processed.block.content._id != games[iter.index - 1].processed.block.content._id)}">
+                <h3 class="k_games-time_title">
+                    <span data-th-if="${game.processed.block.processed.time.end}"
+                        data-th-text="${game.processed.block.processed.time.start + ' - ' + game.processed.block.processed.time.end}"></span>
+                    <span data-th-unless="${game.processed.block.processed.time.end}"
+                        data-th-text="${game.processed.block.processed.time.start}"></span>
+                </h3>
+            </li>
+
+            <li class="k_games-item">
+                <a class="k_games-item_link" data-th-href="${game.processed.url}">
+                    <span class="k_games-img_wrap">
+                        <img data-th-if="${game.processed.image and !game.processed.image.placeholder}"
+                            data-th-src="${game.processed.image.url}">
+                        <img data-th-if="${(!game.processed.image or game.processed.image.placeholder) and game.processed.system and game.processed.system.localizable}"
+                            data-th-src="${portal.assetUrl({'_path=images/gameSystems/' + game.processed.system.text + '.jpg'})}">
+                        <img data-th-if="${(!game.processed.image or game.processed.image.placeholder) and game.processed.system and !game.processed.system.localizable}"
+                            data-th-src="${portal.assetUrl({'_path=images/gameSystems/default.jpg'})}">
+                        <span class="k_games-seats">
+                            <span>места</span>
+                            <span
+                                data-th-text="${game.processed.seatsReserved + '/' + game.content.data.maxPlayers}"></span>
+                        </span>
+                        <span data-th-if="${game.content.data.exclusive}" class="k_games-exclusive_game"><i
+                                class="icon-rock"></i> Экслюзивная игра</span>
                     </span>
-                    <span data-th-if="${game.content.data.exclusive}" class="k_games-exclusive_game"><i
-                            class="icon-rock"></i> Экслюзивная игра</span>
-                </span>
-                <h3 class="k_games-game_name" data-th-text="${game.content.displayName}"></h3>
-                <h4 class="k_games-game_system" data-th-if="${game.processed.system.localizable}"
-                    data-th-text="${portal.localize({'_key=myGames.gameSystem.' + game.processed.system.text, '_locale=ru'})}">
-                </h4>
-                <h4 data-th-unless="${game.processed.system.localizable}" class="k_games-game_system"
-                    data-th-text="${game.processed.system.text}">
-                </h4>
-                <span class="k_games-game_desc_wrap">
-                    <span class="k_games-game_desc" data-th-utext="${game.processed.intro}"></span>
-                </span>
-                <span class="k_games-game_actions">
-                    <span class="k_games-link_more" data-th-href="${game.processed.url}">Узнать больше</span>
-                </span>
-            </a>
-            
-            <div class="k_games-item_actions">
-                <button class="kosticonnect-button primary js_modal-show"> Список игроков</button>
-                <button class="kosticonnect-button inverted js_modal-show">Добавить игрока</button>
-            </div>
-        </li>
+                    <h3 class="k_games-game_name" data-th-text="${game.content.displayName}"></h3>
+                    <h4 class="k_games-game_system" data-th-if="${game.processed.system.localizable}"
+                        data-th-text="${portal.localize({'_key=myGames.gameSystem.' + game.processed.system.text, '_locale=ru'})}">
+                    </h4>
+                    <h4 data-th-unless="${game.processed.system.localizable}" class="k_games-game_system"
+                        data-th-text="${game.processed.system.text}">
+                    </h4>
+                    <span class="k_games-game_desc_wrap">
+                        <span class="k_games-game_desc" data-th-utext="${game.processed.intro}"></span>
+                    </span>
+                    <span class="k_games-game_actions">
+                        <span class="k_games-link_more" data-th-href="${game.processed.url}">Узнать больше</span>
+                    </span>
+                </a>
+
+                <div class="k_games-item_actions">
+                    <button class="kosticonnect-button primary js_modal-show"> Список игроков</button>
+                    <button class="kosticonnect-button inverted js_modal-show">Добавить игрока</button>
+                </div>
+            </li>
+        </div>
     </ul>
 </div>
