counter mest for game page

--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -94,6 +94,10 @@
                     <div class="k_gdp-value" data-th-utext="${game.processed.table}"></div>
                 </div>
                 <div class="k_gdp-info">
+                    <div class="k_gdp-label">МЕСТ</div>
+                    <div class="k_gdp-value">0\5</div>
+                </div>
+                <div class="k_gdp-info">
                     <div class="k_gdp-label">СОЗДАНИЕ ПЕРСОНАЖЕЙ</div>
                     <div class="k_gdp-value"
                         data-th-text="${portal.localize({'_key=myGames.form.pregens.' + game.content.data.pregens, '_locale=ru'})}">
