--- a/app/src/main/resources/site/pages/games/games.html
+++ b/app/src/main/resources/site/pages/games/games.html
@@ -94,8 +94,8 @@
                                 <select name="gameSpace" class="select js_festival-filter-select"
                                     id="k_games-system-select">
                                     <option value="">Все игры</option>
-                                    <option value="free">Есть свободные места</option>
-                                    <option value="full">Мест больше нет</option>
+                                    <option value="true">Есть свободные места</option>
+                                    <option value="false">Мест больше нет</option>
                                 </select>
                             </div>
                         </div>
