Update seats from games to game page

--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -95,7 +95,8 @@
                 </div>
                 <div class="k_gdp-info">
                     <div class="k_gdp-label">МЕСТ</div>
-                    <div class="k_gdp-value">0\5</div>
+                    <!-- <div data-th-class="k_gdp-value ${'js_game-seats-' + game.content._id}"
+                    data-th-text="${game.processed.seatsReserved + '/' + game.content.data.maxPlayers}">0\5</div> -->
                 </div>
                 <div class="k_gdp-info">
                     <div class="k_gdp-label">СОЗДАНИЕ ПЕРСОНАЖЕЙ</div>
