--- a/app/src/main/resources/site/pages/games/games.html
+++ b/app/src/main/resources/site/pages/games/games.html
@@ -10,13 +10,12 @@
         <div class="site_content">
             <div class="kosticonnect-header_inner m-kostirpg">
                 <div class="kosticonnect-short_info">
-                    <a 
-                    href="https://www.kostirpg.com/kosticon-mini/igry" title="KOSTICONMINI">
+                    <!-- <a href="/kostyashki-moskva"> -->
                     <div class="kosticonnect-headline">
                         <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/headline.svg'})}"
                             alt="kosticonnect " />
                     </div>
-                    </a>
+                    <!-- </a> -->
                 </div>
                 <div class="header-logo">
                     <a data-th-href="${portal.pageUrl({'_path=' + site._path})}" data-th-title="${'Главная'}">
