--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -5,30 +5,7 @@
 
 <body class="kosticonnect-page landingPage">
     <div data-th-remove="tag" data-th-utext="${pageComponents.loginRegisterModal}"></div>
-    <header class="kosticonnect-header">
-        <div class="site_content">
-            <div class="kosticonnect-header_inner">
-                <div class="kosticonnect-short_info">
-                    <a href="https://www.kostirpg.com/kosticon-mini/igry" title="KOSTICONMINI">
-                        <div class="kosticonnect-headline">
-                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/headline.svg'})}"
-                                alt="kosticonnect " />
-                        </div>
-                    </a>
-                </div>
-                <!-- <div class="header-logo">
-                    <a data-th-href="${portal.pageUrl({'_path=' + site._path})}" data-th-title="${'Главная'}">
-                        <img data-th-src="${portal.assetUrl({'_path=images/kostirpg_logo_new_logo_full.svg'})}"
-                            alt="Логотип Вечерние Кости" class="header-logo-default" />
-                        <img data-th-src="${portal.assetUrl({'_path=images/kostirpg_logo_new_logo_icon.svg'})}"
-                            alt="Логотип Вечерние Кости" class="header-logo-scroll" />
-                    </a>
-                </div>
-                <div data-th-utext="${headerUser}" class="header-user js_header-user-wrap"></div> -->
-            </div>
-        </div>
-        <div data-th-if="${user}" class="js_header-user hidden" data-th-attr="data-userid=${user.content._id}"></div>
-    </header>
+    <div data-th-remove="tag" data-th-utext="${pageComponents.festivalHeader}"></div>
     <main data-th-attr="data-id=${game.content._id}" class="kosticonnect-wrap k_games-wrap js_game-id">
         <div class="kosticonnect-header_insert">
             <div class="k_gdp-img_decor">
@@ -152,34 +129,6 @@
             </div>
         </div>
     </main>
-    <footer class="fest_contacts">
-        <div class="site_content">
-            <div class="k_social social">
-                <h2 class="k_social-title kosticonnect-title">
-                    СОЦСЕТИ ФЕСТИВАЛЯ
-                </h2>
-                <div class="social-list social-list__sides_align">
-                    <a href="https://www.facebook.com/vecherniyekosti" class="social-link facebook"
-                        title="Facebook"></a>
-                    <a href="https://vk.com/vecherniyekosti" class="social-link vk" title="VK"></a>
-                    <a href="https://twitter.com/vecherniyekosti" class="social-link twitter hidden"
-                        title="Twitter"></a>
-                    <a href="https://www.youtube.com/channel/UCETKVT-Uj-gAqdSTd2YNaMg" class="social-link youtube"
-                        title="Youtube"></a>
-                    <a href="https://www.instagram.com/vecherniye_kosti" class="social-link instagram"
-                        title="Instagram"></a>
-                    <a href="https://www.twitch.tv/vecherniyekosti" class="social-link twitch" title="Twitch"></a>
-                    <a href="https://discord.gg/VfDthGK" class="social-link discord" title="Discord"></a>
-                    <a href="https://t.me/vecherniyekosti" class="social-link telegram" title="Telegram"></a>
-                </div>
-            </div>
-            <div class="about_us">
-                <h3 class="about_us-title">ОБРАЩАЙТЕСЬ ПО ЛЮБЫМ ВОПРОСАМ:</h3>
-                <p><a class="about_us-link" href="mailto:info@kostirpg.com">info@kostirpg.com</a></p>
-                <p><a class="about_us-link" href="tel:+380662098750">+380662098750</a></p>
-            </div>
-        </div>
-    </footer>
     <div class="snackbar js_snackbar">
         <div class="snackbar-text">Some msg</div>
         <div class="snackbar-close icon-delete js_snackbar-close"></div>
