fixed signup form when phone is present

--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="k_gdp-actions js_signin-block" data-th-classappend="${gameSigned ? 'hidden' : ''}">
                     <button data-th-if="${spaceAvailable}"
-                        data-th-attr="data-step=${user && user.content.data.phone != '' ? 'form' : 'init'}"
+                        data-th-attr="data-step=${user != null && user.content.data.phone != null && user.content.data.phone != '' ? 'form' : 'init'}"
                         class="kosticonnect-button primary k_gdp-sign_up-btn js_sign-up-for-game">ЗАПИСАТЬСЯ НА
                         ИГРУ</button>
                     <div data-th-unless="${spaceAvailable}" class="k_games-time_title">Мест больше нет.
